# hello_sol

./: README.md  airdrop.py  data.json  main.py  nft.py  nft2.py  pyproject.toml
