[tool.poetry]
name = "hello-sol"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
solana = "^0.32.0"
requests = "^2.31.0"
theblockchainapi = "^0.0.604"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
